--- a/analysis/paper/Ozarks_FA_Analysis.Rmd
+++ b/analysis/paper/Ozarks_FA_Analysis.Rmd
@@ -7,6 +7,7 @@ date: "2022-10-28"
 ```{r setup, include=FALSE}
 knitr::opts_knit$set(root.dir = "./")
 knitr::opts_chunk$set(echo = TRUE)
+library(rockchalk)
 library(tidyverse)
 library(vegan)
 library(ggfortify)
@@ -18,6 +19,7 @@ library(heplots)
 library(broom.mixed)
 library(cowplot)
 library(car)
+library(partR2)
 #library(leaps)
 
 here::i_am("analysis/paper/Ozarks_FA_Analysis.Rmd")
@@ -109,7 +111,7 @@ FA_groups_per <- FA|>
 
 ```
 
-# Descriptive plots
+# Periphyton Descriptive plots
 ```{r FA plots}
 
 peri_area.p <- FA_groups_areal|>
@@ -187,6 +189,19 @@ blahper2
 
 
 # Periphyton linear models
+
+```{r test}
+blah <- FA_groups_areal|>
+  filter(Type == "Periphyton")|>
+  select(Site, EcoRegion, Canopy_Cover_per, NO3_ug.L,LSAFA,ARA, Tot_FA, EPA, DHA, sum_PUFA)|>
+  pivot_longer(c(LSAFA,ARA, Tot_FA, EPA, DHA, sum_PUFA),values_to = "FA_per", names_to = "FA")|>mutate(FA = as_factor(FA))|>
+  filter(FA == "LSAFA")
+
+blah.lm <- lm(data = blah, FA_per ~ EcoRegion+NO3_ug.L+Canopy_Cover_per)
+anova(blah.lm)
+
+```
+
 ```{r areal lms}
 peri_areal_lms <- FA_groups_areal|>
   filter(Type == "Periphyton")|>
@@ -195,6 +210,7 @@ peri_areal_lms <- FA_groups_areal|>
   mutate(model = list(lm(FA_per ~ EcoRegion+Canopy_Cover_per+NO3_ug.L, data = data)),
          model_reduced =  list(lm(FA_per ~ EcoRegion, data = data)))|>
   summarize(glance(model), 
+            partr2_summary = list(tidy(getDeltaRsquare(model))),
             coefs = list(tidy(model)|>filter(term != "(Intercept)")), 
             vif = list(tibble(vif(model))),
             p.val_lnh= anova(model,model_reduced)[[6]][[2]],
